<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text=""
                android:textSize="80sp"
                android:gravity="bottom|end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/reset"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/lightGray"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="30sp"/>


            <Button
                android:id="@+id/clear"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/lightGray"
                android:text="@string/clear"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/percent"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/lightGray"
                android:text="@string/percentage"
                android:textSize="30sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/log"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/buop"
                android:text="@string/logarithm"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/power"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/buop"
                android:text="@string/power"
                android:textSize="30sp" />

            <Button
                android:id="@+id/negation"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/buop"
                android:text="@string/negation"
                android:textSize="30sp" />

            <Button
                android:id="@+id/division"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/buop"
                android:text="@string/division"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/numberSeven"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/gray"
                android:text="@string/seven"
                android:textSize="30sp" />

            <Button
                android:id="@+id/numberEight"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/gray"
                android:text="@string/eight"
                android:textSize="30sp" />

            <Button
                android:id="@+id/numberNine"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/gray"
                android:text="@string/nine"
                android:textSize="30sp" />

            <Button
                android:id="@+id/multiplication"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/buop"
                android:text="@string/multiplication"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/numberFour"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/gray"
                android:text="@string/four"
                android:textSize="30sp" />

            <Button
                android:id="@+id/numberFive"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/gray"
                android:text="@string/five"
                android:textSize="30sp" />

            <Button
                android:id="@+id/numberSix"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/gray"
                android:text="@string/six"
                android:textSize="30sp" />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/buop"
                android:text="@string/subtraction"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/numberOne"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/gray"
                android:text="@string/one"
                android:textSize="30sp" />

            <Button
                android:id="@+id/numberTwo"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/two"
                android:backgroundTint="@color/gray"
                android:textSize="30sp" />

            <Button
                android:id="@+id/numberThree"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/gray"
                android:text="@string/three"
                android:textSize="30sp" />

            <Button
                android:id="@+id/addition"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/addition"
                android:backgroundTint="@color/buop"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/numberZero"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/zero"
                android:backgroundTint="@color/gray"
                android:textSize="30sp" />

            <Button
                android:id="@+id/mantissa"
                android:layout_width="0px"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/dot"
                android:backgroundTint="@color/gray"
                android:textSize="30sp" />

            <Button
                android:id="@+id/equals"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/buop"
                android:text="@string/equals"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>